# machine_learning_class

./: .gitignore  README.md  pyproject.toml
hws/dbscan/: algorithm.py  main.py  utils.py
hws/face_recognition/: main.py
hws/genetic_algorithm/: algorithm.py  equation.py  main.py
hws/integer_recognition/: cnn.py  cnn_test.py  data_prep.py  drawing.py  helpers.py  hyper_parameters.py  main.py
hws/k_nearest_ngbrs/: algorithm.py  main.py  normalization.py
hws/kmeans/: main.py
hws/shortest_path/: algorithm.py  graph_definer.py  graph_maker.py  main.py
hws/svm/: drawing.py  main.py
