[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["xenoturbellida <ElPGordeeva@stud.kpfu.ru>"]
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
matplotlib = "^3.7.3"
scikit-learn = "^1.3.1"
pygame = "^2.5.2"
networkx = "^3.1"
sklearn-som = "^1.1.0"
torch = "^2.1.1"
torchvision = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
